[package]
name = "jig2-0"
version = "0.1.0"
authors = ["Sean Cross <sean@xobs.io>"]

[dependencies]
rust-ini = "0.10.0"
daggy = "0.4.1"
shlex = "0.1.1"
chan = "0.1.19"
bus = { git = "https://github.com/xobs/bus.git" }
json = "0.11.5"
termcolor = "0.3"
clap = "2.20.5"
regex = "0.2"
clonablechild = "0.1.1"